--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
                 <li><a href="https://github.com/alphx">Chathumina Vimukthi</a></li>
                 <li><a href="https://github.com/akmadhwa">akmadhwa</a></li>
                 <li><a href="https://github.com/gomgam">gomgam</a></li>
+				<li><a href="https://github.com/APSingh-007">Abhishek P. Singh</a></li>
                 <li><a href="https://github.com/egin10">Ginanjar S.B</a></li>
                 <li><a href="https://github.com/MiguelCosme">Miguel Cosme</a></li>
                 <li><a href="https://github.com/SubhrajitPrusty/">Subhrajit Prusty</a></li>
